--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -70,6 +70,7 @@ header {
   height: 60px;
   float: left;
   margin-top: 26px;
+  margin-left:0;
 }
 
 nav .burger {
@@ -154,6 +155,7 @@ nav ul.mobile-menu {
 nav ul {
   float: right;
   margin-top: 0px;
+  margin-right:0;
 }
 
 nav ul li {
