--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -9,9 +9,5 @@
   = f.text_field :title, :placeholder => "Post Title"
   = f.text_area :body, :placeholder => "Post Content"
   %p.graytext{:style => "font-size:15px;"}
-    %span#supportIndicator Drag an image from your desktop into the text area to upload it to
-    %span#uploadIndicator Imgur.
-    %br/
-    %span#message{:style => "display:none;font-size:10px;margin:5px"}
-      Your browser supports drag and drop file uploads.
+    %span#supportIndicator Drag an image from your desktop into the text area to upload it to Amazon S3.
   = f.submit "Save"
