Added jquery ui gem, image upload modal

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,7 @@
  *= require_self
  *= require vendor
  *= require_tree .
+ *= require jquery.ui.dialog
 */
 
 // @import "contenteditable/contenteditable";
