--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -6,9 +6,9 @@
         - @post.errors.full_messages.each do |msg|
           %li= msg
 
-  -if params[:action] == "edit" || params[:action] == "update"
-    = f.label "This is what will show on the url"
-    = f.text_field :seo_title, :placeholder => "SEO Title"
+  / -if params[:action] == "edit" || params[:action] == "update"
+  = f.label "This is what will show on the url"
+  = f.text_field :seo_title, :placeholder => "SEO Title"
   = f.label "This is the title of the blog post"
   = f.text_field :title, :placeholder => "Post Title"
   = f.label "This is the body of the blog post"
