Added sharing buttons to bottom of show post

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -125,7 +125,7 @@
   margin-right: auto;
   border-bottom: 1px solid #e3e1df;
   padding-top: 70px;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
 }
 
 #pages {
@@ -150,3 +150,6 @@ nav span {
   padding-top: 15px;
 }
 
+div.addthis_sharing_toolbox {
+  padding-top: 20px;
+}
