--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     %meta{:charset => "UTF-8"}
     %link{:rel => "icon",:type => "image/png", :href => asset_path("favicon.png")}
     %script{:src => "http://maps.googleapis.com/maps/api/js?sensor=false"}
+    %script{:src => "http://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53c7fdf85e78117f" }
     = render "shared/fonts"
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
