Finished sharing buttons

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -150,14 +150,14 @@ nav span {
   padding-top: 15px;
 }
 
-div.addthis_sharing_toolbox {
+div.sharethis_toolbox {
   display:inline-block;
 }
-div.addthis_post_title {
+div.sharethis_post_title {
   display:relative;
   top:7px;
   right:-30px;
 }
-div.addthis_post_footer {
+div.sharethis_post_footer {
   float:right;
 }
