--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -12,6 +12,12 @@
     %span#supportIndicator Drag an image from your desktop into the text area to upload it to Amazon S3, or use this: 
     %input{:type=>"file",:id=>"files",:name=>"files[]"}
     
+  %div#post-preview
+    %p This is what your post will look like in a Google search result:
+    %span#post-preview-display
+      %h3#google-title - Coshx
+      %p#google-url www.coshx.com/blog/
+      %p#google-description Post Content
   = f.submit "Save"
 %div.hidden#dialog-form{:title => "Insert Image"}
   %form
