--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,4 +1,4 @@
-=provide(:title, " | #{@post.title.mb_chars.capitalize.to_s}".html_safe)
+=provide(:title, "Coshx Labs | #{@post.title.mb_chars.capitalize.to_s}".html_safe)
 =provide(:description, @post.body.mb_chars.to_s.html_safe)
 
 %section.primary.wall-of-text
