makes images look good when they are added to blog posts

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -37,3 +37,10 @@ $availendar-bg: #66bae8;
 @mixin pt-sans {
   font-family: 'PT Sans', sans-serif;
 }
+.clearfix {
+  content: "";
+  visibility: hidden;
+  display: table;
+  height: 0;
+  clear: both;
+}
