adds clarifying statement to the new blog post form for images

--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -11,6 +11,8 @@
   %p.graytext{:style => "font-size:15px;"}
     %span#supportIndicator Drag an image from your desktop into the text area to upload it to Amazon S3, or use this: 
     %input{:type=>"file",:id=>"files",:name=>"files[]"}
+    %br
+    %span#supportIndicator Remember, when placing images in between two sections of text, separate the image snippet with a blank line on either side.
     
   %div#post-preview
     %p This is what your post will look like in a Google search result:
