removes extra fields in image uploading form, removes title from images, and calls description caption

--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -30,13 +30,7 @@
       %input{:type => "text", :name=>"width", :id=>"width", :class=> "text ui-widget-content ui-corner-all"}
       %label{:for => "Height"} Height (in px)
       %input{:type => "text", :name=>"height", :id=>"height", :class=> "text ui-widget-content ui-corner-all"}
-      %label{:for => "Padding"} Padding (in px)
-      %input{:type => "text", :name=>"padding", :id=>"padding", :class=> "text ui-widget-content ui-corner-all"}
-      %label{:for => "Title"} Title
-      %input{:type => "text", :name=>"title", :id=>"title", :class=> "text ui-widget-content ui-corner-all"}
-      %label{:for => "Alt Title"} Alt Title
-      %input{:type => "text", :name=>"alt_title", :id=>"alt_title", :class=> "text ui-widget-content ui-corner-all"}
-      %label{:for => "Description"} Description
+      %label{:for => "Description"} Caption
       %input{:type => "text", :name=>"description", :id=>"description", :class=> "text ui-widget-content ui-corner-all"}
       %label{:for => "Float"} Float
       %select{:name=> "float", :id => "float"}
