removes http from all src files

--- a/app/views/layouts/_top_section.html.haml
+++ b/app/views/layouts/_top_section.html.haml
@@ -5,8 +5,8 @@
     .scroll-arrow
       = image_tag "scroll_arrow.png"
 
-%script{src: "http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"}
-%script{src: "http://code.jquery.com/ui/1.10.0/jquery-ui.js"}
+%script{src: "//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"}
+%script{src: "//code.jquery.com/ui/1.10.0/jquery-ui.js"}
 :javascript
   // fittext.js plugin
   (function($){
