--- a/app/views/posts/_share_buttons.html.haml
+++ b/app/views/posts/_share_buttons.html.haml
@@ -7,4 +7,4 @@
     %a.addthis_button_twitter
     %a.addthis_button_compact
     %a.addthis_counter.addthis_bubble_style
-  %script{:src => "http://s7.addthis.com/js/250/addthis_widget.js#pubid=xa-4f5ee397644a3b4c", :type => "text/javascript"}
+  %script{:src => "//s7.addthis.com/js/250/addthis_widget.js#pubid=xa-4f5ee397644a3b4c", :type => "text/javascript"}
