--- a/app/views/posts/_one_post.html.haml
+++ b/app/views/posts/_one_post.html.haml
@@ -1,4 +1,4 @@
-%script{:src => "http://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53c7fdf85e78117f"}
+%script{:src => "//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53c7fdf85e78117f"}
 .post-show
 	.row
 		#post-text
