updates coshx.com references to have http

--- a/app/views/shared/_facebook_meta.html.haml
+++ b/app/views/shared/_facebook_meta.html.haml
@@ -3,6 +3,6 @@
 %meta{:content => title, :property => "og:title"}/
 %meta{:content => "website", :property => "og:type"}/
 %meta{:content => request.url, :property => "og:url"}/
-%meta{:content => "http://www.coshx.com", :property => "og:site_name"}/
+%meta{:content => "https://www.coshx.com", :property => "og:site_name"}/
 %meta{:content => "100001436239662", :property => "fb:admins"}/
 %meta{:content => description, :property => "og:description"}/
