--- a/app/views/home/_employee.html.haml
+++ b/app/views/home/_employee.html.haml
@@ -1,7 +1,7 @@
 .modal.permalink.hide.fade{'class' => employee.slug, 'id' => employee.slug, "tabindex" => "-1", "data-keyboard" => "true"}
   .modal-header.employee-header
     %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", type: "button"} ×
-    = image_tag Gravatar.new(employee.email).image_url(:size => 80), class: 'about-us-avatar', alt: employee.name
+    = image_tag Gravatar.new(employee.email).image_url(:size => 80, :secure => true), class: 'about-us-avatar', alt: employee.name
     .employee-info
       %h3.capitalize
         = employee.name
