--- a/app/views/home/_team_member.html.haml
+++ b/app/views/home/_team_member.html.haml
@@ -1,4 +1,4 @@
-= link_to(image_tag(Gravatar.new(person.email).image_url(:size => 80), class: 'about-us-avatar'),
+= link_to(image_tag(Gravatar.new(person.email).image_url(:size => 80, :secure => true), class: 'about-us-avatar'),
                     "#", {"data-target" => ".#{person.slug}", "data-toggle" => "modal"})
 #member-info
   %h7
