--- a/app/views/posts/_one_post.html.haml
+++ b/app/views/posts/_one_post.html.haml
@@ -21,7 +21,7 @@
 			%span{class:"clearfix"}
 	.row#more-by-author
 		.column.two
-			%a{:href => about_path, :class => 'about-us-avatar'}(style="background:url(#{Gravatar.new(post.author.email).image_url(:size => 80)});")
+			%a{:href => about_path, :class => 'about-us-avatar'}(style="background:url(#{Gravatar.new(post.author.email).image_url(:size => 80, :secure => true)});")
 		.column.ten
 			%h2 
 				More posts by 
