--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -11,7 +11,7 @@
       %em="Draft"
   %br
   .post-info-wrapper
-    %div(style="width:120px;height:120px;background:url(#{Gravatar.new(post.author.email).image_url(:size => 120)});border-radius:100px;")
+    %div(style="width:120px;height:120px;background:url(#{Gravatar.new(post.author.email).image_url(:size => 120, :secure => true)});border-radius:100px;")
     .post-info
       %div
         Coshx Labs
