--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -31,6 +31,8 @@
 }
 
 #projects {
+  background: white;
+  border-bottom: 1px solid black;
   .featured-project {
     height: 100%;
     width: 100%;
@@ -82,6 +84,11 @@
 #project-description {
   max-width: 380px;
   padding-top: 80px;
+}
+
+.project-description {
+  border: 1px solid black;
+  text-align: center;
 }
 
 @media (max-width: $mobile-view-size) {
