--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -106,6 +106,11 @@
   padding: 0px 10px;
   background-color: $grey-white;
 
+  .row {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
   h3 {
     font-size: 42px !important;
     color: $dark-grey;
