--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,34 @@
 */
 
 // @import "contenteditable/contenteditable";
+
+
+@import "common";
+
+html {
+  height: 100%;
+}
+
+body {
+  position: relative;
+  overflow-x: hidden;
+  height: 100%;
+  margin-top:80px;
+
+}
+
+.main-container {
+  height: 100%;
+  width: 100%;
+}
+
+#work-together-block, #contact-us-banner {
+  background: #ECE6D9;
+  font-size:25px;
+  text-align:center;
+  padding:8%;
+  a {
+    margin: 0 auto;
+    display:block;
+  }
+}
