--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -35,6 +35,32 @@
   letter-spacing: -1px;
 }
 
+.rounded {
+
+  -webkit-transition: all 0.2s ease-out; /* Safari 3.2+, Chrome */
+  -moz-transition: all 0.2s ease-out; /* Firefox 4-15 */
+  -o-transition: all 0.2s ease-out; /* Opera 10.5–12.00 */
+  transition: all 0.2s ease-out; /* Firefox 16+, Opera 12.50+ */
+
+  display: inline-block;
+  font-weight: bold !important;
+  vertical-align: middle;
+  text-transform: uppercase;
+  height: 40px;
+  text-decoration: none;
+  font: 14px 'Merriweather Sans', sans-serif;
+  font-weight: bold;
+  padding: 12px 25px;
+  border-radius: 5px;
+  border-width: 1px;
+  border-style: solid;
+  color: black;
+
+  &:hover{
+    color: white;
+  }
+}
+
 .btn:hover {
   color: #FFFFFF;
 }
@@ -97,6 +123,9 @@
   background-color: #545454;
 }
 
+
+
+
 .the-button {
   -webkit-transition: all 0.2s ease-out; /* Safari 3.2+, Chrome */
   -moz-transition: all 0.2s ease-out; /* Firefox 4-15 */
@@ -118,6 +147,8 @@
     color: white;
   }
 }
+
+
 
 .a-case-study-button {
 
@@ -149,49 +180,10 @@
   }
 }
 
+
 .blanco {
   border-color: #FFFFFF;
   color: #FFFFFF;
-}
-
-.closeoutbike {
-  border-color: #B5BBBF;
-  color: #B5BBBF;
-}
-
-.mobilizeart {
-  border-color: #E9F6F3;
-  color: #E9F6F3;
-}
-
-.gigdog {
-  border-color: #8EA3AD;
-  color: #8EA3AD;
-}
-
-.scheduleshare {
-  border-color: #858585;
-  color: #858585;
-}
-
-.textus {
-  border-color: #CB8AC8;
-  color: #CB8AC8;
-}
-
-.availendar {
-  border-color: #C5DEEB;
-  color: #C5DEEB;
-}
-
-.blue {
-  color: #FFFFFF;
-}
-
-
-.green {
-  border-color: #F1F6E9;
-  color: #F1F6E9;
 }
 
 .a-button {
@@ -238,8 +230,4 @@ body .darkblue {
     background: white !important;
     color: $dark-blue;
   }
-}
-
-#lets-work-together {
-  padding-top: 5px;
 }
