--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -1,234 +1,31 @@
 @import "common";
 
-footer {
-  z-index: 10;
-  position: relative;
-  background: #16171a;
-  padding: 50px 0px 60px;
-  color: #818181;
-  h3, h4, h5, a {
-  font-family: "Merriweather Sans", sans-serif;
-  }
-  h3 {
-    font-size: 12px;
-    text-transform: uppercase;
-    color: #707070;
-  }
-  h4 {
-    font-size: 11px;
-    font-weight: normal;
-    text-transform: none;
-    color: #B8B8B8;
-  }
-  h5 {
-    font-size: 11px;  
-    font-weight: bold;
-    text-transform: none;
-    color: #B8B8B8;
-  }
-}
+#footer {
+  display: block;
+  margin: 0 auto;
+  height: $footer_height;
+  width:50%;
 
-#footer-with-map {
-  padding-bottom: 508px;
-}
-
-#together {
-  background: $grey-white;
-  position: relative;
-  padding-top: 50px;
-  padding-bottom: 30px;
-  a{
-    margin:auto;
-    margin-top:4%;
-    display:none;
-    &:active {
-      background: #4D5E30;
-    }
+  #footer-blog {
+    margin-left: 6%; //so all links (including logo image) are equidistant from one another
   }
-  h3 {
-    color: #535353;
-    text-align: center;
-  }
-}
-
-#site-links {
-  z-index: 10;
-  background: white;
-  h1 {
-    margin-top: 80px;
-  }
-  h2 {
-    margin-bottom: 35px;
-  }
-  img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 43px;
-  }
-} 
-
-#footer-info {
-  padding-bottom: 50px;
-  border-bottom: 1px solid #242427;
-}
-
-#social, #footer-logo {
-  margin:0px;
-  padding:0px;
-  margin-top:50px;
-  h3{
-    text-align:center;
-    float:none;
-    font-size:10px;
-  }
-  #social-links {
-    width:84px ;
-    display:block;
-    margin-left:auto;
-    margin-right:auto;
-    margin-top:-15px;
-    img {
-      display:inline;
-     }
-  }
-  #logo-links {
-    width:60px ;
-    height:60px;
-    display:block;
-    margin-left:auto;
-    margin-right:auto;
-  }
-}
-
-#location.column {
-  display:block;
-  padding:0px;
-  margin:0px;
-  margin-top:50px;
-  .city {
-    text-align: center;
-    padding:0px;
-    margin:0px ;
-    text-transform: uppercase;
-    font-weight:bold;
-  }
-  .address, h5 {
-    text-align: center;
-    line-height:2;
-    margin:0px;
-    padding:0px;
-  }
-  .address {
-    margin-top:10px;
-  }
-  a:hover {
-    color:#60b5d3;
-  }
-}
-
-#footer-bottom {
-  border-top: 1px solid #242427;
-  h4 {
-    text-transform: uppercase;
-    color: #505050;
-  }
-  a {
-    text-transform: uppercase;
-    font-size: 11px;
-    float:right;
-    color: #505050;
-  }
-  img {
-    margin-top: 7px;
-    float:right;
-  }
-  @media (max-width:$mobile-view-size) {
-    text-align:center;
-    img,a{
-      float:none;
-    }
-  }
-}
-
-
-@media (min-width: $desktop-view-size) {
-
-  #together {
-    h3 {
-      width: 660px !important;
-      display: inline !important;
-      float: left !important;
-    }
-  }
-
-  #work-together {
-    width: 24% !important;
-    display: inline !important;
-    float: right !important;
-
-    a {
-      margin-top: 0 !important;
-    }
-  }
-
   #footer-logo {
-    width: 70px;
-    margin-top: 0px !important;
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    img{vertical-align: middle;}
   }
-
-  #logo-links {
-    margin-left: 0px !important;
-    margin-right: 0px !important;
-  }
-
-  #location {
-    margin-top: 5px !important;
-    margin-left: 40px !important;
-
-    h5 {
-      text-align: left !important;
+  .link {
+    float: left;
+    display: block;
+    width:22%;
+    text-align:center;
+    a {
+      color:black;
+      line-height: $footer_height;
     }
-  }
-
-  .city {
-    text-align: left !important;
-    font-size: 12px !important;
-    padding-bottom: 17px !important;
-  }
-
-  .address {
-    text-align: left !important;
-    line-height: 18px !important;
-    padding-bottom: 17px !important;
-  }
-
-  #social {
-
-    max-width: 100px;
-    margin-top: 0px !important;
-
-    h3 {
-      font-size: 12px !important;
-      margin-top: 0px !important;
-      margin-bottom: 25px !important;
-    }
-  }
-
-  #social-links {
-    width: 42px !important;
-  }
-
-  #copyright h4 {
-    font-size: 12px !important;
-  }
-
-  #footer-bottom img {
-    margin-top: 20px !important;
-  }
-
-  #footer-bottom a {
-    margin-right: 5px !important;
   }
 }
+
+
 
