--- a/app/views/layouts/_contact_us_banner.html.haml
+++ b/app/views/layouts/_contact_us_banner.html.haml
@@ -1,3 +1,3 @@
-#work-together-block
-  Want to start the conversation?
+#contact-us-banner
+  Let's start the conversation.
   = link_to "Contact us", contact_path, :id => "lets-work-together", :class => "btn rounded"
